<resources>
    <string name="app_name">MinorProject</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="log_in">LOG IN</string>
    <string name="not_a_member_signup">Not a member? Sign up</string>
    <string name="delete">DELETE</string>
    <string name="usernametext">usernameText</string>
    <string name="email">Email</string>
    <string name="log_out">Log Out</string>
</resources>
