<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/gradient5">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/user"
                app:civ_border_color="@android:color/background_dark"
                app:civ_border_width="2dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="30sp"
            android:text="@string/usernametext"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:drawablePadding="4dp"
            android:letterSpacing="0.02"
            android:drawableStart="@drawable/person"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="30sp"
            android:drawablePadding="4dp"
            android:letterSpacing="0.02"
            android:text="@string/email"
            android:drawableStart="@drawable/email"
            android:textColor="@color/white"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/log_out"
            android:id="@+id/logout"
            android:textColor="@color/white"/>


    </LinearLayout>

</RelativeLayout>